# Proaktiv-Dokument-Hub

./: .cursorignore  .cursorrules  .gitattributes  .gitignore  .pr-body.md  AGENTS.md  AI_HANDOFF.md  CLAUDE.md  COMPLETED_TASKS_SUMMARY.md  CONTEXT.md  INSTALL.md  Proaktiv-Dokument-Hub.code-workspace  README.md  ROADMAP.md  add_indicators.py  add_lily_watermark.py  convert_all_images.py  convert_corrected.py  debug_watermark.py  deploy-all.bat  deploy-backend.bat  deploy-frontend.bat  docker-compose.yml  fix_lily_style.py  package-lock.json  package.json  regenerate_full.py  remove_indicators.py  run-entra-sync.bat  run-proaktiv-scraper.bat  run-signature-emails.bat  sanitizer.js  server.js  spec.md  start-dashboard.bat  template-pipeline.code-workspace  update_html.py  update_html_corrected.py  update_naering.py  verify_detailed.py  (+4 more)
.agent/: context.md
.claude/: settings.local.json
.cursor/: MASTER_HANDOFF.md  active_context.md  context-registry.md  poweroffice-reference.md  qa_results_summary.md  qa_results_v2.7_deployment.md  qa_review_checklist.md  vitec-reference.md  workflow_guide.md
.planning/: .continue-here.md  POST-REVIEW-ADDITIONS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  field-registry.md  (+2 more)
api/: README.md  (+4 more)
mcp/vitec-next/: README.md  pyproject.toml  server.py
mcp/vitec-next/data/: flettekoder.json  reference_data.json
mcp/vitec-next/parsers/: parse_flettekoder.py  parse_reference.py
mcp/vitec-next/resources/: __init__.py  flettekoder.py  reference.py
mcp/vitec-next/tools/: __init__.py  merge_fields.py  validation.py
(+1249 files in other folders)
